--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           '" />',
       )
     </script>
-    <title>展厅中控系统</title>
+    <title>智慧展厅</title>
     <!--preload-links-->
     <!--app-context-->
   </head>
